// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductCard renders ProductCard component succeded 1`] = `
<div>
  <div
    class="productCard undefined"
  >
    <h1>
      Product Card
    </h1>
  </div>
</div>
`;

exports[`ProductCard should increment the counter 1`] = `
<div>
  <div
    class="productCard undefined"
  >
    <h1>
      Product Card
    </h1>
    <span
      title="count"
    >
      0
    </span>
    <button>
      +
    </button>
  </div>
</div>
`;
